[package]
name = "cargo-embassy"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = "Get up and running with Embassy in seconds."
repository = "https://github.com/AdinAck/cargo-embassy"
categories = ["no-std", "embedded", "command-line-interface"]

[dependencies]
Inflector = "0.11.4"
clap = { version = "4.4.11", features = ["derive"] }
indicatif = "0.17.7"
open = "5.0.1"
probe-rs = "0.21.1"
